Fixes longer menu names stretch mobile view too wide #395

--- a/styles/search.sass
+++ b/styles/search.sass
@@ -62,6 +62,7 @@
         a
             color: $blue-text-color
             cursor: pointer
+            word-break: break-all
 
         p
             color: $black-text-color
